[package]
name = "antof_traffic"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.1", features = ["http1", "tokio", "macros"]}
chrono = "0.4.11"
chrono-tz = "0.10.1"
dotenv = "0.15.0"
memcache = "0.18.0"
ndarray = { version = "0.16.1", features = ["std", "serde"] }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138" }
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres", "uuid"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }

[dev-dependencies]
serial_test = "3.2.0"

